# pcr3bp_code

./: .gitmodules  CMakeLists.proof_only.txt  CMakeLists.txt  README.md  bootstrap.sh  build_and_run.sh  export_proof.py
src/: capd_renderable.hpp  main.cpp  manifold4_transformation.hpp
src/pcr3bp_basic/: levi_civita_coordinate_change.hpp  levi_civita_inverse_coordinate_change.hpp  regularized_system.hpp  setup_parameters.hpp  standard_system.hpp
src/pcr3bp_basic_test/: levi_civita_coordinate_change_test.cpp  regularized_hamiltonian_test.cpp  regularized_system_test.cpp  standard_system_test.cpp
src/pcr3bp_obsolete/: pcr3bp_reg_lyapunov_orbit.hpp  pcr3bp_reg_lyapunov_orbit_implicit.hpp  pcr3bp_reg_lyapunov_orbit_lookup.hpp  pcr3bp_reg_params.hpp  pcr3bp_reg_poincare.hpp  pcr3bp_reg_poincare_coord.hpp  pcr3bp_rhez_alpha.hpp  pcr3bp_rhez_alpha_h.hpp  pcr3bp_rhez_common.hpp  pcr3bp_rhez_xieta.hpp  pcr3bp_setup_values.hpp  pcr3bp_std_lyapunov_orbit.hpp  pcr3bp_std_lyapunov_orbit_implicit.hpp  pcr3bp_std_lyapunov_orbit_lookup.hpp  pcr3bp_std_poincare.hpp
src/plot_1/: reg_evolution_lyapunov_master.hpp  reg_evolution_lyapunov_master.multi.hpp  reg_evolution_lyapunov_master.multi.std.hpp  reg_evolution_lyapunov_plot.cpp  reg_evolution_lyapunov_plot.multi.cpp  reg_evolution_lyapunov_plot.multi.std.cpp  reg_evolution_raw_master.hpp  reg_evolution_raw_plot.cpp  reg_evolution_xieta_master.hpp  reg_evolution_xieta_plot.cpp  rhez_u_34_master.hpp  rhez_u_34_plot.cpp  rhez_u_master.hpp  rhez_u_plot.cpp  rhez_u_plot.lim.hpp  rhez_u_plot.manifold_intersections.hpp  rhez_u_plot.v3.hpp  std_evolution_lyapunov_master.hpp  std_evolution_lyapunov_plot.cpp  std_evolution_raw_master.hpp  std_evolution_raw_plot.cpp
src/plot_1/objects/: coordinate_systems_origins.hpp  dual_reg_evolution4.hpp  homoclinic_orbit.hpp  interp.hpp  intersection_renderable.hpp  ppv_manifolds.hpp  ppv_manifolds_maps.hpp  reg_evolution.hpp  reg_evolution4.cpp  reg_evolution4.hpp  reg_masses.hpp  rhez_u_alpha_object_23.hpp  rhez_u_alpha_object_24.hpp  rhez_u_alpha_object_34.hpp  rhez_u_alpha_param.hpp  rhez_u_xieta_object_23.hpp  std_evolution.hpp  std_masses.hpp  unstable_ppv_manifold.hpp
src/plot_2/: coverings_master.hpp  coverings_plot.cpp  gen2dplot_master.hpp  gen2dplot_plot.cpp  gen2dplot_plot.scale.hpp  gen2dplot_plot_x.hpp  gen2dplot_plot_x0.hpp  gen2dplot_plot_x1.complex.hpp  gen2dplot_plot_x1.hpp  gen2dplot_plot_x2.hpp  gpg_master.hpp  gpg_plot.cpp  hset_parameters_to_coordsys_converter.cpp  hset_parameters_to_coordsys_converter.hpp  hset_renderables_container.cpp  hset_renderables_container.hpp  load_hset_parameters_list.cpp  load_hset_parameters_list.hpp  orbit_from_coordsys_container.cpp  orbit_from_coordsys_container.hpp  origins_from_coordsys_container.cpp  origins_from_coordsys_container.hpp  parse_line.hpp  plot22.hpp  plot_ivector.hpp  rhez_u_24_core_interior_base.hpp  rhez_u_24_master.hpp  rhez_u_24_plot.cpp  rhez_u_24_plot.hpp  rhez_u_24_plot.main.cpp
src/plot_2/objects/: collision_manifold.hpp  hl_map.hpp  hset_renderable.hpp  hset_renderable.parallelogram.hpp  object_with_params.hpp  renderable4d_with_params.hpp  section_plot4.hpp  section_plot4_ce.hpp
src/plot_common/: core_interior_base.hpp  core_interior_base_4d.hpp  edge_detector.hpp  timelevel_divisor.cpp  timelevel_divisor.hpp  window_properties.hpp
src/proof/: advanced_cone_conditions.hpp  covering_relation_checker.hpp  covering_relations_setup.hpp  covering_relations_setup_export.cpp  covering_relations_test.collision_manifold_derivative_check.cpp  covering_relations_test.collision_manifold_derivative_check.hpp  covering_relations_test.cpp  covering_relations_test.hpp  covering_relations_test.parallelogram_covering_derivative_check.cpp  covering_relations_test.parallelogram_covering_derivative_check.hpp  covering_relations_test_base.hpp  g_map.hpp  homoclinic_orbit_coordsys_generator.hpp  homoclinic_orbit_origins_generator.hpp  homoclinic_orbit_origins_initial.hpp  homoclinic_orbit_origins_initial_generator.hpp  homoclinic_orbit_origins_initial_test.cpp  parallelogram_covering_checker.hpp  parallelogram_covering_conditions.hpp  pcr3bp_reg2_initial_coordsys_generator.hpp  pcr3bp_reg_basic_objects.hpp  periodic_orbit_coordsys_generator.hpp  periodic_orbit_parameters.hpp  periodic_orbit_parameters_test.cpp  periodic_orbit_parameters_test.extended.cpp  periodic_orbit_parameters_test.hpp  scaled_local_poincare4_map.hpp
src/tools/: affine_poincare_map.hpp  amortized_map.hpp  auxiliary_functions.hpp  change_coordsys.hpp  coordsys4_alignment.hpp  coordsys_utilities.hpp  coordsys_vec.hpp  direction.hpp  direction_shifting.hpp  floating_info.hpp  gain_map.hpp  gig_map.hpp  hash.hpp  id_with_constraint.hpp  local_poincare4.hpp  local_poincare4_constraint.hpp  local_poincare4_constraint_base.hpp  local_poincare4_constraint_spec.hpp  local_poincare4_projection.hpp  local_poincare4_projection_base.hpp  local_poincare4_projection_spec.hpp  power_iteration.hpp  print_bootstrap.cpp  print_bootstrap.hpp  psi0_coefficients.hpp  psi0_specialized.hpp  ry_functions.hpp  s_symmetry.hpp  solution_curve_interpolation.hpp  solution_curve_with_collision_check.hpp  solution_curve_with_condition_check.hpp  test_tools.hpp  timemap_test_params.hpp  types.hpp  unstable_directions_generator.hpp  variable_printer.cpp  variable_printer.hpp
src/tools/logging/: h_set_parameters.hpp
src/tools/plotting/: implicit_function_differential_equation.hpp  solution_curve_interpolation.hpp
